# pam_scripts

./: .gitignore  pyproject.toml  requirements.txt  setup.py
src/pam_scripts/: _kmc.cpp  _kmc.py  _kmc_db.cpp  _kmers.cpp  embed_distances.py  jaccard_similarity.c  jaccard_similarity.html  jaccard_similarity.pyx  kmc.py  kmers.py  kpy.py  pam_io.py  sketch.py
src/pam_scripts/kmc_api/: kmc_file.cpp  kmc_file.h  kmer_defs.h
